killercoda/cka/alexis-carbillet/1-cm-and-secrets.yaml
k create cm app-config --from-literal=DB_HOST=localhost --from-literal=DB_PORT=3306
k create secret generic db-secret --from-literal=DB_PASSWORD=supersecret

k get cm app-config -o yaml
kubectl get secret db-secret -o yaml
echo "c3VwZXJzZWNyZXQ=" | base64 -d

# Step 2: Use ConfigMap and Secret in a Pod
k run app-pod --image=nginx --dry-run=client -o yaml > pod.yaml

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: app-pod
  name: app-pod
spec:
  containers:
  - image: nginx
    name: app-pod
k create -f pod.yaml 
k exec app-pod -- env


apiVersion: v1
kind: Pod
metadata:
  labels:
    run: app-pod
  name: app-pod
spec:
  containers:
  - image: nginx
    name: app-pod
